# DEFI-RISK-ANALYZER

./: .env.example  .gitignore  CHECK_BACKEND.bat  CONEXAO.md  DEPLOYMENT_COMPLETE.md  Dockerfile  INSTALL.md  QUICK_START.md  README.md  REVOLUTIONARY_FEATURES.md  SETUP_COMPLETO.md  START_SERVERS.bat  SYSTEM_STATUS.md  TEST_SYSTEM.bat  ULTIMATE_FEATURES.md  docker-compose.yml  init_db.py  package-lock.json  pyproject.toml  requirements-minimal.txt  requirements.txt  run-all.bat  run.bat  setup-db.bat  setup-postgres.bat  setup.bat  start-postgres.bat  start-simple.bat  start.bat  test-connection.py
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: revolutionary_routes.py  routes.py  saas_routes.py
app/core/: config.py  database.py
app/services/: ai_oracle.py  blockchain_service.py  defi_autopilot.py  multiverse_simulator.py  neural_market_prophet.py  quantum_risk_engine.py  realtime_shield.py  risk_engine.py  saas_engine.py  social_trading.py  time_machine.py
docs/: API_DOCUMENTATION.md  BACKEND_DOCUMENTATION.md  FRONTEND_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT.md
frontend/: .env.example  FEATURES.md  SECURITY.md  middleware.ts  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AdvancedCharts.tsx  GasTracker.tsx  LiveAlerts.tsx  MarketOverview.tsx  PortfolioTracker.tsx  PricingTable.tsx  ProtocolList.tsx  RevolutionaryDashboard.tsx  RiskAnalysisCard.tsx  RiskHeatmap.tsx  SecurityDashboard.tsx  SmartContractAuditor.tsx  (+1 more)
kubernetes/: deployment.yaml
monitoring/: prometheus.yml
(+9 files in other folders)
